objects/Forecasting_History__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ForecastSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is checked when the records are being added via the forecast submit button instead of the edit button.</description>
        <label>ForecastSubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppAmount__c</fullName>
        <description>This is the log location for snapshots of the forecast Values</description>
        <label>OppAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppCount__c</fullName>
        <description>This is the opp count for snapshots</description>
        <label>OppCount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppExpAmount__c</fullName>
        <label>OppExpAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New-Physical-Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Virtual-Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Physical-Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Virtual-Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Physical-Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Virtual-Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total-Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total-Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total-Base Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total-Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewOppCount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecast_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Forecast History</label>
    <nameField>
        <displayFormat>FH-{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>